remove jest and run tests with nodejs testrunner

--- a/organisaatio-ui/public/index.html
+++ b/organisaatio-ui/public/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fi">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/organisaatio-service/favicon.ico">
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/organisaatio-service/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Organisaatio käyttöliitymä"
       content="Organisaatioiden hallintasovellus"
     />
-    <title>Opintopolku</title>
+    <title>Organisaatio</title>
   </head>
   <body>
     <div id="root"></div>
